--- a/src/Components/Checkout/Checkout.css
+++ b/src/Components/Checkout/Checkout.css
@@ -8,8 +8,12 @@
   margin-top: 140px;
   width: 100%;
 }
+.heloo{
+  color:rgb(63, 200, 235) !important;
+}
 .emailmy {
   font-weight: 800;
+  color:rgb(63, 200, 235);
 }
 .checkout__title {
   margin-left: 10px;
